Added more content to index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <h1>Hellu</h1>
 
     <h2>How are you?</h2>
+
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perspiciatis ab numquam recusandae totam rem, iusto nesciunt voluptatibus itaque cumque, eligendi esse architecto nobis minus animi.</p>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga natus saepe voluptates est ducimus consequuntur numquam cumque laudantium vitae obcaecati! Est perferendis officiis hic incidunt eveniet natus iure, officia sapiente dicta. Libero saepe pariatur nobis optio impedit earum facere voluptates assumenda repudiandae debitis perferendis molestiae labore inventore at temporibus ratione tenetur non, dolorum neque! Eum sint sequi corrupti voluptatum repudiandae.</p>
 </body>
 </html>
